--- a/locales/en.json
+++ b/locales/en.json
@@ -6,11 +6,12 @@
 	"projects": "My Projects",
 	"password": "Password Generator",
 	"notFound": "Not Found",
+	"contact": "Contact",
 
 	"contents": "Contents",
 	"creator": "Creator",
 
-	"about_text": "Hello, I'm Berkant. I'm in high school now and I'm studying Mechatronics. I have been dealing with software for 4 years. I am developing myself especially in the front-end field. I usually work on <b>Web Based Systems</b>. I deal with various fields such as website, mobile application, desktop program, artificial intelligence, algorithm software.",
+	"about_text": "Hello, I'm Berkant. I'm in high school now and I'm studying Mechatronics. I've been dealing with software for about %{date} years. I am developing myself especially in the front-end field. I usually work on <b>Web Based Systems</b>. I deal with various fields such as website, mobile application, desktop program, artificial intelligence, algorithm software.",
 	"notFound_text": "The page you are looking for is currently unavailable, do not try again after the beep.",
 
 	"stacks_title": "Program Languages I use most",
