--- a/locales/tr.json
+++ b/locales/tr.json
@@ -41,5 +41,9 @@
 	"strong": "Güçlü",
 	"very_strong": "Çok Güçlü",
 
-	"more_text": "Daha Fazlası İçin:"
+	"more_text": "Daha Fazlası İçin:",
+
+	"contactMedia": "İş teklifleri, Sponsorluk vb",
+	"contactApp": "İş başvurusu",
+	"contactPerson": "Şahsi"
 }
