--- a/locales/tr.json
+++ b/locales/tr.json
@@ -7,6 +7,7 @@
 	"password": "Şifre Oluşturucu",
 	"notFound": "Sayfa Bulunamadı",
 	"contact": "İletişim",
+	"apps": "Uygulamalar",
 
 	"contents": "İçerik",
 	"creator": "Üretici",
