--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
 	"password": "Password Generator",
 	"notFound": "Not Found",
 	"contact": "Contact",
+	"apps": "Apps",
 
 	"contents": "Contents",
 	"creator": "Creator",
