--- a/locales/tr.json
+++ b/locales/tr.json
@@ -12,7 +12,7 @@
 	"contents": "İçerik",
 	"creator": "Üretici",
 
-	"about_text": "Merhabalar, ben Berkant. Şuan lisedeyim ve Mekatronik bölümünü okuyorum. Yaklaşık %{date} Senedir yazılım üzerine uğraşıyorum. Kendimi özellikle Front-end alanında geliştiriyorum. Genellikle <b>Web Tabanlı Sistemler</b> üzerinde çalışıyorum. Website, mobil uygulama, masaüstü programı, yapay zeka, algoritma yazılımları gibi çeşitli alanlarla uğraşıyorum.",
+	"about_text": "Merhabalar, ben Berkant. %{date} Senedir yazılımla uğraşıyorum. Web tasarım, masaüstü programlama, mobil progralama, yapay zeka gibi alanlarda geliştiricilik yapıyorum. Ek olarak elektronik alanında uğraşıyorum bu sayede hayata geçireceğim bazı projelerimde mevcut.",
 	"notFound_text": "Aradığınız sayfaya şu anda ulaşılamıyor, sinyal sesinden sonra bir daha denemeyin.",
 
 	"stacks_title": "En çok kullandığım programlamalar",
