Fotoğraf değişikliği, yazı düzenlemeleri ve modül güncellemeleri yapıldı.

--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -12,7 +12,7 @@
   "contents": "İçerik",
   "creator": "Üretici",
 
-  "about_text": "Merhabalar, ben Berkant. %{date} Senedir yazılımla uğraşıyorum. Web tasarım, masaüstü programlama, mobil progralama, yapay zeka gibi alanlarda geliştiricilik yapıyorum. Ek olarak elektronik alanında uğraşıyorum bu sayede hayata geçireceğim bazı projelerimde mevcut.",
+  "about_text": "Merhabalar, ben Berkant. %{date} Senedir yazılımla uğraşıyorum. Web tasarımı ve programlama, masaüstü ve mobil uygulamalar ve gömülü sistemler ile ilgileniyorum. Şuanda bir firmada 'Yazılım Geliştirici' olarak görev alıyorum. Aynı zamanda freelancer olarak çalışıyor, kendi projelerimle ilgileniyor ve başka ekiplerdeki projelerle ilgileniyorum.",
   "notFound_text": "Aradığınız sayfaya şu anda ulaşılamıyor, sinyal sesinden sonra bir daha denemeyin.",
 
   "stacks_title": "En çok kullandığım programlamalar",
