--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,7 @@
   "contents": "Contents",
   "creator": "Creator",
 
-  "about_text": "Hello, I'm Berkant. I'm in high school now and I'm studying Mechatronics. I've been dealing with software for about %{date} years. I am developing myself especially in the front-end field. I usually work on <b>Web Based Systems</b>. I deal with various fields such as website, mobile application, desktop program, artificial intelligence, algorithm software.",
+  "about_text": "Hello, I am Berkant. %{date} I've been working with software for years. I am interested in web design and programming, desktop and mobile applications and embedded systems. I am currently working as a 'Software Developer' in a company. At the same time, I work as a freelancer, dealing with my own projects and projects in other teams.",
   "notFound_text": "The page you are looking for is currently unavailable, do not try again after the beep.",
 
   "stacks_title": "Program Languages I use most",
